static/main.css
#beatContainer {
    width: 100%;
    height: 150px;
    border: 1px solid black;
    position: relative;
    overflow-x: scroll;
    white-space: nowrap;
}

#waveformCanvas {
    overflow-x: scroll;
}

.beat {
    height: 100%;
    width: 2px;
    background-color: green;
    position: absolute;
}


.beat:hover {
    cursor: grab;
    /* Changes the cursor to a grab hand when hovered */
    background-color: greenyellow;
    /* Changes the color to green when hovered */
}

canvas {
    width: 100%;
    height: 100%;
    position: absolute;
}

audio {
    width: 100%;
    margin-top: 20px;



}

.blue-line {
    position: absolute;
    width: 2px;
    background-color: blue;
    height: 100%;
}

/* For the boxes */
.form-container {
    flex-direction: row;
    overflow-x: auto;
    /* Allow horizontal scrolling if needed */
    white-space: nowrap;
    border: 2px solid black;
    padding: 10px;
    margin-top: 20px;
    display: grid;
    grid-template-columns: auto repeat(var(--sections-count), 1fr);
}

.label {
    margin: 0px;
    padding: 0px;
}

.label-container {
    display: flex;
    left: 0;
    z-index: 10;
    position: sticky;
    background-color: white;
    flex-direction: column;
    justify-content: space-between;
}

.label-container div {
    /* padding: 5px 0; */
    font-weight: bold;
}

.section {
    display: flex;
    flex-direction: column;
    align-items: center;
    border-left: 1px solid #ccc;
}

.section .time-range {
    text-align: center;
    font-weight: bold;
    margin-bottom: 5px;
}

.input-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.input-container input[type="text"] {
    width: 100%;
    padding: 5px;
    margin-bottom: 5px;
    box-sizing: border-box;
}

.dropdown-input {
    width: 150px;
    /* Fixed width for input boxes */
    box-sizing: border-box;
    /* Ensure padding is included in width */
}



#transitionsContainer {
    display: flex;
    flex-direction: row;
    overflow-x: auto;
    /* Allow horizontal scrolling if needed */
    white-space: nowrap;
    /* Prevent wrapping */
    margin-top: 20px;
}

.transition-container {
    border: 5px solid black;
    padding: 10px;
    margin-right: 10px;
    /* Space between containers */
    background-color: #f9f9f9;
    display: inline-block;
    /* Ensure horizontal layout */
}



.form-container {
    display: flex;
    /* Use flexbox for horizontal layout */
    overflow-x: auto;
    /* Allow horizontal scrolling */
    white-space: nowrap;
    /* Prevent wrapping of child elements */
    border: 2px solid black;
    /* Optional: Add border for visual clarity */
    padding: 10px;
    /* Optional: Add padding for spacing */
}

#transitionsContainer {
    display: flex;
    /* Use flexbox for horizontal layout */
    overflow-x: auto;
    /* Allow horizontal scrolling */
    white-space: nowrap;
    /* Prevent wrapping of child elements */
    padding: 10px;
    /* Optional: Add padding for spacing */
}

#trash,
#transitionsContainer {
    display: flex;
    overflow-x: auto;
    /* Allow horizontal scrolling */
    white-space: nowrap;
    /* Prevent line breaks */
    border: 2px solid white;
}

.section {
    flex: 0 0 auto;
    /* Prevent section from growing or shrinking */
    margin-right: 10px;
    /* Add some spacing between sections */
}

#processedDataContainer {
    margin-top: 5px;

}

/* Other */
/* .transition-container, .input-container {
    display: flex;
    flex-direction: column;
    margin-top: 10px;
    gap: 5px; 
}

.label-container, .transition-container label {
    font-weight: bold;
    margin-bottom: 2px;
}

.transition-container input {
    width: 200px; 
}

.section {
    display: flex;
    flex-direction: column;
    margin-bottom: 20px;
}

.section .time-range, .section .play-button {
    margin-bottom: 10px;
}

.section .input-container, .transition-container .input-container {
    display: flex;
    flex-direction: column;
    gap: 5px;
} */
.form-container,
.transition-container {
    display: inline-block;
    vertical-align: top;
    margin-right: 20px;
    /* Space between sections */
}

.input-container {
    display: flex;
    flex-direction: column;
    gap: 5px;
    /* Space between labels and inputs */
}

.label-container,
.transition-container label {
    font-weight: bold;
}

.transition-container {
    border: 1px dashed gray;
    /* Optional: Different style for transition containers */
    padding: 10px;
}

/* Draggable Transitions */
.draggable-line {
    position: absolute;
    height: 100%;
    width: 3px;
    background-color: red;
    cursor: ew-resize;
    z-index: 10;
}

.highlight-area {
    position: absolute;
    height: 100%;
    background-color: rgba(0, 255, 0, 0.3);
    /* Green highlight */
    z-index: 1;
}

#finalizeTransitionButton {
    margin-top: 10px;
}

#waveform {
    width: 100%;
    height: 256px;
    /* Set a height for the waveform */
    border: 1px solid #ccc;
    /* Optional: To visually check the container */
}

/* For suggestions button */
.suggestions-button {
    margin: 5px 0px;
    padding: 10px 15px;
    background-color: #677f99;
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-size: 16px;
    transition: background-color 0.3s ease;
}

.suggestions-button:hover {
    background-color: #0056b3;
    color: white;
}

/* Styling for the suggestions content box (hidden by default) */
.suggestions-content {
    background-color: #f9f9f9;
    border: 1px solid #ddd;
    padding: 15px;
    margin-bottom: 20px;
    width: 400px;
    bottom: 50px;
    right: 10px;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
    z-index: 1000;
}

/* Hidden by default */
.hidden {
    display: none;
}

/* Style for the bullet points */
.suggestions-content ul {
    list-style-type: disc;
    padding-left: 20px;
}

.suggestions-content ul li {
    margin-bottom: 10px;
}

/* Default fills */

#vibeInput,
#colorInput {
    padding: 5px;
    margin: 10px 0;
    width: 200px;
}

#fillDefaultsButton {
    padding: 8px 15px;
    background-color: #28a745;
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

#fillDefaultsButton:hover {
    background-color: #218838;
}

#finalize-timestamps {

    padding: 10px 20px;
    background-color: rgb(230, 147, 147);
    color: black;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    transition: background-color 0.3s ease;

}

.beat:hover {
    cursor: grab;
    background-color: greenyellow;
}

/* #colorPickerButton {
    width: 150px;
    height: 50px;
    margin: 20px;
    align-self: center;
    justify-content: center;
} */

#colorBox {
    display: flex;
    align-items: center;
    /* Vertically centers items within the box */
    justify-content: space-around;
    /* Spreads elements across the width */
    /* border: 1px solid #ccc; */
    border-radius: 8px;
    margin-bottom: 10px;
    gap: 10px;
}

#colorPickerButton {
    width: 150px;
    height: 50px;
    display: flex;
    justify-content: center;
    /* Center icon inside button */
    align-items: center;
    background-color: #f0f0f0;
    margin-left: 50px;
    /* border: 1px solid #ddd; */
    border-radius: 5px;
    cursor: pointer;
    font-size: 2em;
}

#finalize-timestamps {

    padding: 10px 20px;
    background-color: rgb(230, 147, 147);
    color: black;
    border: none;
    border-radius: 4px;

    cursor: pointer;
    transition: background-color 0.3s ease;

}

.beat:hover {
    cursor: grab;
    background-color: greenyellow;
}

/* #colorPickerButton {
    width: 150px;
    height: 50px;
    margin: 20px;
    align-self: center;
    justify-content: center;
} */

#colorBox {
    display: flex;
    align-items: center;
    /* Vertically centers items within the box */
    justify-content: space-around;
    /* Spreads elements across the width */
    /* border: 1px solid #ccc; */
    border-radius: 8px;
    margin-bottom: 10px;
    gap: 10px;
}

#colorPickerButton {
    width: 150px;
    height: 50px;
    display: flex;
    justify-content: center;
    /* Center icon inside button */
    align-items: center;
    background-color: #f0f0f0;
    margin-left: 50px;
    /* border: 1px solid #ddd; */
    border-radius: 5px;
    cursor: pointer;
    font-size: 2em;
}

#finalize-timestamps {

    padding: 10px 20px;
    background-color: rgb(230, 147, 147);
    color: black;
    border: none;
    border-radius: 4px;

    cursor: pointer;
    transition: background-color 0.3s ease;

}

.beat:hover {
    cursor: grab;
    background-color: greenyellow;
}

/* #colorPickerButton {
    width: 150px;
    height: 50px;
    margin: 20px;
    align-self: center;
    justify-content: center;
} */

#colorBox {
    display: flex;
    align-items: center;
    /* Vertically centers items within the box */
    justify-content: space-around;
    /* Spreads elements across the width */
    /* border: 1px solid #ccc; */
    border-radius: 8px;
    margin-bottom: 10px;
    gap: 10px;
}

#colorPickerButton {
    width: 150px;
    height: 50px;
    display: flex;
    justify-content: center;
    /* Center icon inside button */
    align-items: center;
    background-color: #f0f0f0;
    margin-left: 50px;
    /* border: 1px solid #ddd; */
    border-radius: 5px;
    cursor: pointer;
    font-size: 2em;
}

#playPauseButton {
    margin-top: 10px;
}

/* select and drag image into initial image box */
.selectable-image {
    cursor: pointer;
    width: 200px;
    margin: 5px;
    border: 2px solid transparent;
}

.selectable-image.selected {
    border: 3px solid blue;
    /* Adjust thickness and color as needed */
    border-radius: 5px;
    /* Optional: add rounded corners */
}



#loadingIndicator {
    width: 0.05px;
    height: 0.05px;
}

h1 {
    margin-top: 20px;
}

select {
    margin: 20px;
    padding: 10px;
    font-size: 16px;
}

.image-container {
    display: flex;
    overflow-x: auto;
    white-space: nowrap;
    width: 100%;
    /* margin: 20px auto; */
    background-color: #fff;
    padding: 10px;
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.image-container img {
    margin: 5px;
    border-radius: 10px;
    max-height: 200px;
    cursor: grab;
}

.image-container img:active {
    cursor: grabbing;
}

.texture-caption {
    font-size: 14px;
    /* Adjust the font size */
    margin-top: 5px;
    /* Space between the image and the caption */
    color: #555;
    /* Optional: Caption color */
    word-wrap: break-word;
    /* Ensures long words break to the next line */
    text-align: center;
    /* Centers the caption below the image */
    overflow-wrap: anywhere;
    /* Allows breaking even in long unbroken words */
}

#image_examples {
    margin-left: 20px;
}

#brainstormingBox {
    display: none;
    border: 2px solid #ddd;
    padding: 20px;
    overflow-x: auto;
    border-radius: 5px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
    margin-right: 20px;
}

